# ElasticNotebook

./: .gitignore  ElasticNotebook.py  OptimizerType.py  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
elastic/: container.py  event.py  record_event.py
elastic/algorithm/: baseline.py  optimizer.py  optimizer_exact.py  optimizer_greedy.py  selector.py
elastic/common/: migration_metadata.py
elastic/core/: container.py  convert_graph.py  event.py  globals.py  record_event.py
elastic/core/common/: checkpoint_file.py  migration_metadata.py  profile_graph_size.py  profile_migration_speed.py  profile_variable_size.py
elastic/core/graph/: cell_execution.py  edge.py  find_oes_to_recompute.py  graph.py  node.py  node_set.py  (+5 more)
elastic/examples/: metadata.pickle  numpy.ipynb  numpy_notebook  numpy_recover.ipynb  pandas.ipynb  pyspark.ipynb  pytorch.ipynb  restore_notebook.ipynb  simple.ipynb
elastic/experiment/: .gitignore  checkpoint.py  criu.py  experiment_script.py  migrate.py  migrate_experiment.ipynb  migrate_experiment.py  recover.py  restore.py  resume_experiment.ipynb  resume_experiment.py  run_experiment.py  scalability.py  utils.py
elastic/io/: adapter.py  external_storage.py  filesystem_adapter.py  pickle.py
elastic/test/: test_container.py  test_event.py  test_optimizer.py  test_optimizer_exact.py  test_optimizer_greedy.py  test_utils.py
examples/: numpy.ipynb  pyspark.ipynb
experiment/: migrate.py  recover.py
test/: test_container.py  test_event.py
test/io/: test_filesystem_adapter.py  test_pickle.py
(+88 files in other folders)
