[metadata]
name = elastic-notebook
version = 0.0.1
author = Yuzhou Mao
author_email = yuzhom@illinois.edu
description = intelligent scaling of python workload using cloud storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/illinoisdata/elastic-notebook
project_urls =
    Bug Tracker = https://github.com/illinoisdata/elastic-notebook/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = elastic
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src